Start green button

--- a/ILEditor/Editor.resx
+++ b/ILEditor/Editor.resx
@@ -130,115 +130,132 @@
   <data name="newButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMwSURBVDhPXZNJTBNhHMU/Dx48mRgP4sFETx40SjAQ4sFo
-        NCZq3ECRpRZ3BRGXAwdNDEYEtbUNiyIuMQKKUo3WlVIjLVgQMDZQsLTS0pFF2oAlUtqZ6fT57zDGxH/y
-        Mpnl9773vZlhf2f/Ey5ZbfDZis1+FL37iQLjKI6/GIbKwAXVDd4fOQbfV7WB61Y/5ZrVjVyD+tnQ1qO3
-        u+cqOGOqBk+BpsWP/2eal+D/LWIgEEHvaAQ2bwiPusaR89A9oXrsUSk4Y1l1rss1toAMcb+iGAtKCExJ
-        mAxJmIpICAsShKh8G2ExhhbXNLJrHX4FZyzjXl95fWcAogT0jUtwBiS4/RK8ExI4Mhsms+HgrMPpB0Pg
-        RaD0vRcKztieanud0T6B4AzQ6RPQ/UOEndQ7KpKhCOd4lAyjIH+cudcDy8Ak0qrtIwrO2M7KjmbLQBC+
-        CZHi8bB+5/HJw6N9SEAnJ+ALyT4iQIoBWbou7KrsnNpV0bVJwRnbrm1zOcdC6KGHzGRgdvP46BZgGZxV
-        2yCPDp8obzGjsgPpWtsCBZ2ddWUf+OBMFO1eHh9o9Y/fCSSDVoKtisHnIVEuMk1rwcay5vkKyli69sm8
-        rSVNcrsWGY7IanGTCIyrldTFiQjxUWy+1CAyYI6CM7axyLhk95Um8NEYgfHoBJKBlbYRN7QSXGMy4Fx1
-        Lo7e2IF9FzfFNhetvKDgFP+sYfneK++ooBisHkGO30JwXBaCK9/Uo7jxAF47qmAfNUHXnIcM3Uok5ydo
-        CK5fuPZUXaPmeR9G6H0/bA/j2dcw3vRRFy5K4Ykg99oWvOzV42V/ufwdaMxHoDMfw6r8+WGWcuJ+Ruqh
-        OzOZJa9xvn4AhfedyLvzDYduOqEq70emzoFt5xPx1nFXhv+OsacKKfkJYGsOV18tqWtXLv8bqkMudSoc
-        w7rTy3DddBClplz5XmlT7r8ESeqK4wX696g19eOVzYtWxxh6vZPg/CH8mhYxQ//ALWMZ0jTLoTUdlleO
-        H+PncgdJmZqFq7P0l1dn3ahNzNa/JX1OzNa6VmTrA8u2FQupB6qw/kQNNhRmIvXkUjl2Sv7iUHLeojLG
-        GPsDUxnKJzRrcFcAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMwSURBVDhPXZNLTBNRGIWvCxeuTIwLdWHUlQuJEg2EuDAa
+        jYkSX6gIWItvBRHUBQtMiEYEtbUNgiI+YgQUpRqtT0oJtGhBwNhAwdJqS0ce0gYskdLOTKfHv8MYE//k
+        ZDKP79xzz8ywv3PgCZekNvhsF8x+FL77iTzjCE68GILKwAXV9d4f+w2+L2oD161+yjWpG7h69bPBrcdu
+        d89WcMZU9Z48Tasf/88UL8H/W8RAIILekQhs3hAedY1h/0P3uOqxR6XgjGXWui5V2wIyxP2KYjQoITAp
+        YSIkYTIiISxIEKLybYTFGFpdU8iqcfgVnLH0e33ldZ0BiBLQNybBGZDg9kvwjkvgyGyIzIaCMw4FDwbB
+        i0Dpey8UnLE9VfZao30cwWmg0yeg+4cIO6l3RCRDEc6xKBlGQf44c68HloEJpFXZhxWcsR0VHU2WgSB8
+        4yLF42H9xuOjh0f7oIBOTsBnkn1YgBQDMnVd2FnRObnzRtcmBWdsm/aDyzkaQg89ZCYDs5tHi1uA5fuM
+        Pnzn0eET5S2mV3Rgt9Y2T0FnZl1ZMx+cjqLdy6OZVm/5RiAZtBFsVQw+DYpykWlaCzaWNc1VUMZ2a5/M
+        2VrSKLdrkeGIrFY3icC42khdnIgQH8Xmi49EBsxScMY2FhoX77rcCD4aIzAenUAysNI24oZWgqtNBpyr
+        ysax69uxr3hTbHNhwnkFp/hnDcv3Xn5HBcVg9Qhy/FaC47IQXPGmDhcaDuK1oxL2ERN0TTlI1yUgKXeh
+        huC6+WtP1zZonvdhmN73w/Ywnn0J400fdeGiFJ4Isq9uwctePV72l8vfgcZ8FDrzcazMnRtmySfvp6cc
+        vjOdUfIaRXUDyL/vRM6drzh80wlVeT8ydA6kFiXireOuDP8dY08lknMXgq05UnWlpLZdufxvqA651Mlw
+        DOsKluGa6RBKTdnyvdLG7H8JVqtvnMjTv0eNqR+vbF60OUbR650A5w/h15SIafoHbhnLkKZZDq3piLxy
+        /Bg/lztYnaGZvypTf2lV5vWaxCz9W9KnxCyta0WWPrAktVhIOViJ9SersSE/Aymnlsqxk3MXhZJyFpQx
+        xtgfTuvKIbUA5mkAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="saveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANXSURBVDhPXZJdTFNnGMffm1147/WSJV54ZTRbXNREb9iV
-        yTImioC16j4CxiLMLMjwi63Fj7ZKxMSCWrUtiFIdww1RNIBoS0s7OynSD9rSQylymtI2Bdqe08N/j6XL
-        lj3JP++T57z/3/u+z3PYP3HwPrdVbg5bmp/zaHjyHoq+KKp7I5CZuaS8OzR7wBx+IzdzDvkDblDew3XL
-        H87s/r7d8VHRzpisO6jQDPP4fyzlJPBpEd5YFhPRLCyhZXSNL+CAwR+X3QvKinbGKk0+ZYclVjBxiTzm
-        kxJiKQmLyxJSWQkZQYKQL3xGRlzFsG8JVUY3X7QzVn5r8mqnPQZRAiYXJHhiEvy8hFBcAkewCMEiyTVC
-        3Z0Z5ETg/EAIRTtje3UuU58rjuQKYA8LcMyKcJEmoiIBRXgW8gTMg/iov/UWI95F7NG55op2xr66NjY4
-        4k0iHBfpejm8nM7hdTAH64wAOyfASXLNCZBWgcor4yi9Zk+Vto1/UbQz9qX2lc8zv4y3tOk5AWqvu9Gk
-        d6Ne58LPpneovuxETasTP3a4cKL9LxxRj+GTikdbi3bGdl14kUuu5GEN5fCCTv9O60CvM11482PrbGH9
-        b9wd4nHoom2tB2Xa++t2q54WujtC5qHpLKparNAPJwqba9schfVDZKh5qSyg+TWCw5esa4CShr6Pv255
-        ilx+lcwE8GchuzBGpyRodBJEqkv0+DxJoDGJVFN1B7Dn7MgaYNcP5o37Wp5Qg1bxMigQRKAn2NE+wONM
-        ZwDnugI4ZfTjpzteNJJO3vbgpN4DmXIIZO5cv6PW1KN5NIk5mrfBmsHDNxkcVttw9Y8omu9xpDBOG4No
-        ujuNxtt+NOi9ONHhRvmZQbDPa/Tl2765sVKh+h1NnV4cJ/LRG1Moa36F6/08/cZpRFNxUgLRZAJzlMeX
-        02i8OYmSul6wz77VXVSZrMUW/RulZ0fR0Z/A+zQP5VApdLbjaLfVU16GhaUImm4GsL3mAdin8rZqResA
-        jM/e4bElhFH3PCZCi9j7iwXP/vwwhQCsi+cxtWTA1IqBcg3VZqAyBLDzaA8BKjTrN1e2KjdXXjZuqWrt
-        J9m2VGl9G/b9JuxXjqJaPYG6K2Ec005Dofah9tIUjqmdKFH0YJO8C38De8Prp4cq1E0AAAAASUVORK5C
-        YII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANWSURBVDhPXZJdTFNnGMffm13s3muT7WpXRrPFRZfMG7wy
+        WcbEIWBX3ZwBYxFmFmQ4FdfiR1slYmJBrdoWRKmO4YYoGr5cS0urnRTpB23poRQ5TWmbAm3P6eG/x9JF
+        syf5533ynPf/e9/3eQ77L767y22Vm8OW5qc8Gh69gaIviureCGRmLinvDs3tM4dfys2cQ36PG5T3cN3y
+        +7O7DrU7PijaGZN1BxWaYR7/j+WcBD4twhvLYjKahSW0gq6JRewz+OOyO0FZ0c5Ypcmn7LDECiYukcdC
+        UkIsJWFpRUIqKyEjSBDyhc/IiGsY9i2jyujmi3bGym9MXe60xyBKwNSiBE9Mgp+XEIpL4AgWIVgkuU6o
+        uzWLnAicHQihaGdsj85l6nPFkVwF7GEBjjkRLtJkVCSgCM9inoB5EB/1N15hxLuE3TrXfNHO2NdXxgdH
+        vEmE4yJdL4fRmRz+DuZgnRVg5wQ4Sa55AdIaUHlpAqVX7KnStomdRTtjX2mf+zwLK3hFm54SoPaqG016
+        N+p1LpwxvUb1RSdqWp34ucOFY+3/4Hv1OD6qeLC1aGdsx7lnueRqHtZQDs/o9B+1DvQ604U3P7TOFdb3
+        4/YQj/3nbes9KNPe/XCX6nGhuyNkHprJoqrFCv1worC5ts1RWN9GhpqXygKa3yM4cMG6Dihp6Nv4Tctj
+        5PJrZCaAPwvZuXE6JUGjkyBSXaLH50kCjUmkmqo7gN2nRtYBO34yf/JtyyNq0BpGgwJBBHqCHe0DPE52
+        BnC6K4ATRj9+ueVFI+n4TQ+O6z2QKYdA5s4NX9SaejQPpjBP8zZYM7j/MoMDahsu/xVF8x2OFMavxiCa
+        bs+g8aYfDXovjnW4UX5yEOzzGn35th+urVao/kRTpxdHiXz42jTKmp/jaj9Pv3Ea0VSclEA0mcA85fGV
+        NBqvT6Gkrhfss4O68yqTtdiid1F6agwd/Qm8SfNQDpVCZzuKdls95WVYXI6g6XoA22vugX0qb6tWtA7A
+        +OQ1HlpCGHMvYDK0hD2/WfDkxdspBGBdOovpZQOmVw2Ua6g2C5UhgC8P9xCgQrNhc2WrcnPlReOWqtZ+
+        km1Lldb3cdkfwl7lGKrVk6i7FMYR7QwUah9qL0zjiNqJEkUPNsm78C97Jeujx1jUKAAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="liblButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALJSURBVDhPrZHfT1JhGMfprnnd39B1986rNje3TCVGBBoc
-        QYaConZQUvDoZjmcvwhF0QJFsxSN/FGhOPPHVCh1usw155qKDRUuWFGtm/PtvK+2WnbZsz3bu3O+38/z
-        fd5X9N9rleNSFqxsarC8WBFRMzi4mUM7kq9EkDXcXrjLphLNmfx8rVeUheLGEsR0WhwLpoTZjATL0nNM
-        X4h4mRFhQXMmP1+rcgn/2WLBd0cnjnUaRGRi2uRMvpF/b6SZfLBcf5kaOBeXwj5gU0tbihWVT0uwJ76G
-        pNeLuKEIJ8IKxPQLdqItQJTJFVbKwhRrvEIBVW5T6N6kBTX+Cph9RuxLruPH2CS+OjsQK9LSyPHyEnzK
-        lVMzWeVAlvMboLdr+Nbp+/Auu2AZZSmdAJLOTiQdDiSam3CkyqXmIybvFPBnggJPHma3p9A63QDzSBl2
-        b92gk5POLnyx25FotCGqVFAjARwK08OSDN5kbb/KceMpIl2vCuGPS5jamsRweADdvjosFjPYk2XTlyAp
-        yF0cKmTYFWdgVq0CZxtEWfc89PUDIVFhXz6WduYwsTGKsXUfBkNuVAwXo6a6AyFGLrxANvakWQgpZag3
-        t0HbFkTrxCaqvcvIMnfzIn2bmvevDWFkdRBDYS88Sy6wQ3pkWZ7heWgXdZ7XKGgOUBNpAtDZZ6BqfAVx
-        zRhEpS2GNINTEzX0a+Gac2BgxU3vIqfGj5mNCHyLO3AH3sHavwJj1zxybS+pOb9lGpJaAUAKwIWSNoO6
-        oINJFnnVKOxjKD2wto/Hcx/wROhH01tQNQWomRESEQBN8HeVN2kvKTnlRSnn5j3B93AHt/FQSNAuxM+z
-        nU4mAGndODJNLv7Mdr40VmeavKo3KhOENt9bdExuQt0ShLzhBTIrfRCbemL5rD39TP7vIqvpLF2aHLMz
-        Ka0dFyL7kW7q+aasbL9zqhCJfgLrpA4st8gDeAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALISURBVDhPrZHdT5JhGMbprHnc39Bx586jNje3DCFGBBog
+        H0P5UnpRUvDNzXI4BQlFUANFsxSNVCoEZ35MhVKny1xzrqnY8OvAFdU64ep9H2217LB7u7dn73tdv/u6
+        n4fz32uJpnNmbVRu3KSXpBRy7N7kkU6VShGndLdn71K5rOZMfr5WqioTx0YDjjRqHDCmE4sFJxRFzkfa
+        MhxXGpFkNGfy8/VGLMh+tlrx3d2BA40SKRGfNHtmv7H/EsLCbNykvUwMtI/OoR5SuRUOvaT6qQHb/GvI
+        BIM41pXjkFmBNf2CHapVSMuLmZW4mKCMVwigxm9O3I9YUReugiVkxI7gOn6MRvDV046jcjWJfGwy4FOx
+        mJjZVXZFvN8ArVOZdcYeILjgg3WEInQWkPF0ION246SlGfuyYmLel5ecAv5MoAqUYGpjAs5YIyzDldi6
+        dYNMzni8+OJy4aTJjrRUQowsYI+ZvigoyJptbVdpeiyHo+mRIflxHhPrEQwl+9EZqsecXo5tURF5CTYF
+        exd7EhG2+AWYUshA2wdQ2TkDbUN/glPWW4r5zWmMr45gdCWEgYQfVUN61NW2IyEXMy9QhG0hFwmpCA2W
+        Vqhb43COr6E2uACuxZvlaB2KbHh5EMNLAxhMBhGY94Ea1IJrfYbniS3UB15D1RIlJrZZgMY1CVnTK/Dr
+        RsGpcOjydB5lWtenhm/ajf5FP7kLXl0Yk6sphOY24Y++g61vEUbvDIrtL4m51BGD4B4DYAvABUOrTqFq
+        l2fKgwqU9coJPbq8g8fTH/CE6Uexdciao8QsZxKxAJLg7zI1qy9JaelFId2dDcTfwx/fQDeToI2JX2I/
+        ncwChPVjKDR3ZM9s50tp8+SJa3rSIkZoD71Fe2QNCkcc4sYXKKwOgW/uOiqlXPln8n8Xu5rG6lXyLJ6M
+        8N4YEzmMfHPXN2l1251TBYfzE81UDhw60dOAAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="compileButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJLSURBVDhPpdJbSNNRHAfwE730VD4VSRRGdnlLQsIu9GCM
-        egofQjDxWms1cUstcBuljuFStCljs9t0N22VFImZZje7matFUdBFehImWqlz23+X//btnPOfET2ZfeH7
-        cji/z//8z/9P/jt5ao+ypXc8qO0Zh6ab1vUFtY5PONP1EadtH1B99T2qLr2F+qIPKosXFeZX0FieBdkc
-        Bww3fYn2wUn8a0tMjxIcYE9eSuXNj8EBjesrlpLyxgcSUOv8zBeicRERWiEaR1CIIyDEMBuK4se8gKmZ
-        MPzTIUxMzeObP8D3lxiGUgC9MJZYIoGYKHIoHIsjFJGguXAcP4MRTAcoNCtg8nuY7y+qH5AAdtssIgXi
-        DKGNUkigUIidhkLzFFJ378Oxziz4Z+b4/sKz/RLAPhWLmExyYAGK0kYYRBEGnXDkoL6vAPkdW+kpBRTo
-        7khA9ZV3v4GFMkDl3otKVw4UjmyU2bKgu3UY171tqLlxCDLTWuRrPRKgsr6WANrEH5DSuRO3fRb0vjHz
-        wWteE0zDNbC/bILCLUN24wrsMJJVpNI8xgGWJC1DEhQop+/LhluHVDh/TwnDXTnq+krR0H8cHSN6FHbt
-        QeY5IpKK9lE+/HeOXN4Gz5gJ7tEW2F80wfbcSJGTsI40QO4+gEzdSqRryHaSd6rHo2h9yv+so8aHKDXc
-        R7F+EHnWjTjYtg65F1Zjd3Maijp3wfKkDmVOGTbp0rC/un6A38Fis1m/LFRsz8UGLZlI15EtqeXFJ6OK
-        hNZrl2ONlmSklmgI+QWYTH31KI1l+gAAAABJRU5ErkJggg==
+        eoo9hGCiqbVWE7ecBW6jnGO4FG3K2OymbjptlRSJmWY3u5kzoyjoIj0JE63U3f67/fftnPOfET2ZfeH7
+        cji/z//8z/9P/jtyjUfV0DMR1HdPQNdF2/kFVa5PONv+EWdaP0B77T0qLr+F5tI41HYvymyvobM/D7I5
+        DphvjYnNA1P41xZaH4scYE9eShX1T8ABXedXLCWltQ8loKrjM1+IxhOI0ArROIJCHH4hhrlQFD8CAqZn
+        w/DNhDA5HcA3n5/vP2oeTAH0wlhioohYIsGhcCyOUESC5sNx/AxGMOOn0JyAqe9hvr/Q2C8B7LZZEhSI
+        M4Q2SiGBQiF2GgoFKKTp2ofjbVnwzc7z/QXn+iSAfSqWRDLJgQUoShthEEUYdNKVA2NvPvJattJTCsg3
+        3JUA7dV3v4GFMkDt3ovyzhwoXdkoac2C4fZh3PA2ofLmIcisa5Gn90iA2jEmAbTiH5CqYyfujNvR88bG
+        B697rbAOVcL5qg5KtwzZtSuww0JWkXLbKAdYkrQMESlQSt+XDTcOqnHhvgrmewpU9xajpu8EWoZNKGjf
+        g8zzJEHKmkf48N85cmUbPKNWuEca4HxZh9YXFoqcgmO4Bgr3AWQaViJdR7YT+eluj7LxGf+zjlkeodj8
+        AEWmAcgdG3GwaR1yL67G7vo0FLbtgv1pNUo6ZNhkSMN+rbGf38Fis9m0LFTkzMUGPZlMN5AtqeXFJ6OC
+        hNbrl2ONnmSklmgI+QWKjH3xJyiKZAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="zoomInButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKLSURBVDhPrZHfS1NhGMf3F3TbZdFFzAqRRM+NVoKaTHSl
-        c3Puh5iMlVomiSRMlOZO5chZ+YMpOcM8M2adCixLZzk3D+XOe8wwIcR5NmLFLqoz6e7wdN52ZIRCXfSB
-        9+o8n+/7fZ+j+G8sU0aC9Zpp5K1NBCf14iKlE0MeU4IZ1tFMfyUhj+0NR5ks3IO6ODtuRstjNbawR68M
-        uSuUzLDGxrirUHBIFw+4zljk8T/BN6dkA8lGhAy0JWgQn2zmosmmFf5H2Sr//VCgT00uutTxeadqdxOW
-        MtP45nBEUCJeuCCddi4qtKHodivHJ1ukIAMX+XZwoVeN/NdVtKylQVRtYnms2rYSEyok+WpKTl6R5SYU
-        FRqkRoV+h8o24yhLyFqaoFcnht16pTTcuHPrzhOsz41Q90QHxskKmOksVs73FIqyliYwoRXxwjhesGIR
-        bSUv4TCWF87XPtICtXYPKkdLfwf4yYLdASGPIcEMamxsdLsk1UJoqH+mB7NPA20vLsLo+wFonKqHQmc+
-        nLATIGtploY09FJ/FcKLkupruZhgwZU9q0MwzN0BMtQBfe9ugHPJDjntWbsDAq5yIjigjr/pVZPs5s8D
-        XCxZgCuXDRaBxWsGJ+OAmpFKyG7LhMzmDHjcnKeX1TSve8otAek/+2+Woln7aRt+Lz648rVABxxvPQax
-        sBs2g7dgzq6Gp/XEfllNM0+qiFfdKnrGUZzAy5rrPiXiylktR+FI42H4sjYOX9cn4NNsF/j0+SK1V8he
-        0JdPmhZ6qyESckH8wxhsMXfh7UgdkEXKDXnk70w15Jnmus/C+nQHfJzuhMXbWvBZiU3587/x0JJTc9+Y
-        /fllVwn4zuVujBty9ykUCsUvT6KPenMR2ZsAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKMSURBVDhPrZHvSxNxHMf3F/S0h0UPYlaIJHpPNCnUZKIr
+        3ZxzP8RkWGqZJJIwUZq7ypGz8gdTcoZ5M2ZdBZal88fpPMrd98wwIcR5G7FiD6qb9Oz4dN88GaFQD3rB
+        99F9Xu/v+/s51X9jmTITnM9KI19lnBkzSPOUXgp6LXF2wECzPaWEMrY/PGWx8Y+qYtyIFS0PV9hDXqM6
+        6ClRswM6O+vRo8V+Q4xxn7Mp43+Cb96RTSQXFlPQlqhDQqKBjyTqV4QfRavC9yNMt5ZccGtjMy7N3iYc
+        ZaXxzaGwqEaCeEk+LXxEbEaR7SZeSDTKQSY+/O3wfJcWBW5qaEVLgqjK+PJwuX0lKpbI8vUdOXFNketR
+        RKyVG+UGnBr7pLMormhJGJ9eCnmManm4bvfW3SfUvDRD1TMDmMdKYLItXz3TeUZStCRzozoJL4wXxBos
+        oq3EFRzGCeLFyidlQK09gNKhwt8BATJnb0DQa4qzfTo7F9ku2Gkh1la/MILVr4PmV5dh6H0v1I1XQ64r
+        G045CFC0JEv9OnqpR4/wouT6ZXxUtOHK3tV+GODvARlshe53t8C15ICMlrS9AYy7mFjs1cbmurQkt/nz
+        EB9NnMaVi/rywOazgot1QsVgKaQ3p0JqQwo8bcgyKmqS2c5iGyP/58DtQjTlOGvH78UHV77BtMLJphMQ
+        DXlgc/EOTDu08LyaOKioSWZIDfGmQ0NPOvPjeFnTHTkSrpzWeByO1R2FL2sj8HV9FD5NtYPfkC1R+4Xs
+        B301xzLfVQ7hoBtiH4Zhi70PbwergMxTbygjf2e8Nssy3XEe1ida4eNEGyzcLQN/DbGpfP43HtsyKh6a
+        0z+/bi8A/4XMjRFT5gGVSqX6BRFlj2EiJDPSAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="zoomOutButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ+SURBVDhPrZH/SxNxGMf3LwRBEEFREOuXIKQGYZSkbqx0
-        ZXNzzWlmwzLLIgmFKw23SVZbkSXTHzbQbYbhUWSudE7n5gp3n5MihQrnbdCq9UXvhkZ0Pd0nT0ZsUD/0
-        gs8v93lez/P+PCf5b0y5y2WUp4JEnspksE/HT7i1fMhhSIa7tGS444hMLMsO7TYY6d6qBNVTgaacR4mI
-        QycN2Uuk4S41EbaXomCnNhGwHTKK5X+CJ6/IegsVZbeheVaNGK6ejnF108xi0QtmYXPgpsoyYVMlRq8p
-        M5NQ7goST45EWSli2FPCaaJj7EUUSzXQDHdeaKSno183jVtVyNemJEUtDXJXJqecZcR0nC0R5MYVmbsg
-        ynUoxtYKifJ9ZiXhNRclRS1N0KPlI3adVCg+vTp19Qk4Ec2wNTiFt7lQOtqez4tamoBLw+OF4UIsonnu
-        LG5GMezJ399i7IlphtPiBj5LXmaDkEOfDN9VE1QspVhJwdb+bGyAH/Vn4Hv1cVhWayBVoIDFnbvhy9bt
-        IGppJjvV5GRHKcKLEuJr6DhrxPK3Z35YHhuCpccDkOrvBc7ZDZ/Wb8lsELAVy4J3VIkxq8pCzS1tpONc
-        XrbJWP64ZgMM1OfqRDWNv73YGBD+s+/qATTcKifwe/EZatpP+K/L+ZlHTRCP2GEueANGWlXwoFq2TlTT
-        jFqUsqcmJek1FybxskZM+/iHl+ULw1cOwht/G7x/1QMfZl3wergF+nV7eHe2Jtkgz+01jFvLIBqyQeKl
-        E+bDt+F5dxVYCqRvxZK/c7821zBiOgyzg5dgZrAZJm5poL9mx2fx+t+4Z9xlcJXnwJMWBfQdk71z6XLW
-        SiQSyS+FYJwiEUL5xwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ/SURBVDhPrZHvS1NhFMf3LwRBEEFREOtNEFKDMEY/prLS
+        le2HS6eZDUutFUko3NJwm2TliiyZvnCgm4bhpci0dJubzhXuPncUKVS43Q1atX7ovUMjup3uk1dGbFAv
+        +sDz5j7nc873OVfy35hxlcmo/nIS9Vck/QM63ufS8IEeQzLYpSODHUdlYll2aJfBSPdVJqjecjTjOEaE
+        evTSgL1YGuxSE0G7Bk116hJ+22GjWP4nePKKXGqlIuw2FGXViOFMdIyrCzOLhS+Yhc3+myrrpE2V8FxT
+        ZiahXOUknhyKsFLEsKeF00jH2IsolqqnGe680KiUjnzd5GtXIXerkhS1NMhVkZxxlBDhOFssyA0rMndB
+        lOtQjK0REh1wW5TEqKUwKWpp/P0aPmTXS4Xi2tWpq0/AiWiGrcYpRpvypJ62fbyopZlwqnm8MFyIRRTl
+        zuJmFMOe+v0txp4MM5wON3Bb5ZkNAj2lyeBdNUHFUgUrKdianw318MN0Br5XnYBltRZSigJY3Lkbvmzd
+        DqKWZrpTTU53aBBelBBfS8dZI5a/PfPC8sQILD0egtRgH3CObvi0fktmA7+tSDZ1R5WYaFdZqfmljXSc
+        25ttMpY/rtkAQ6Zcvaim8bYVGf3Cf3ZfPYjGWvIJ/F58Rhr3E97rCn72USPEQ3aYn7oB4y0qeFAlWyeq
+        aTxWpeypWUmOWvKSeFnjZjn/8HL+wtiVQ/DG2wrvX/XChzknvB5rhkHdHt6VrUk2yHNyg6+9BCIBGyRe
+        OiAavA3PuyvBqpC+FUv+zv2aXMO4+QjMDV+C2eEmmLylhcHqHZ/F63/jnnGXwVmWA0+aC2DguOydU5+z
+        ViKRSH4BRN+cB0R3qvgAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="tool_bar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>393, 17</value>
   </metadata>
+  <data name="greenOpen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJmSURBVDhPhZLRS1pRHMcP7A/Y0/6WHva2pz3uac+BQkKE
+        QYKFIEStIBHUgkTEmqzGFCyXteWlqV3d9Ho163qvlldvWY3R3GIwxsYevjvnTDe3Vvsdvhy4fH/n87u/
+        34/8L0ql0lKhUPiezWaRTqchCAK2trawvr6OaDT6tGu7GrIs36aK6rqO09O30Fsn0HUDDaZGC53OR6ys
+        rKBr/zMo9X6xWDwzDAMXFxcoSHvIvS5CzErIiHlkMm9QP9QRCoVANE37pigKKpUKKBH5fB6iKCKVSiGZ
+        TGJzc5OXG4lEOHF+fgFerw9arQG/3w/Cki8vP8Ew2lwt4wRNVm7z+Fe5h1TvOx848VUqB2FHhKod0Ye8
+        IOVymSfSym9Ura5zotvtxtzcHKrqIVwuF4gkSZzKjez07v5Dv2lagxO3hQxebqehKDVMT0+D5HI53uEe
+        6Tr1iE/yy3j47AH26QNOpxOEzZaNhxv/Pr1v9FaqP4n3Ht/FwMIAKvsaxsfHQVinWaP6zVduqh5xIyEg
+        viFgr1LF2NgYSCKRQJN2vGe8TlX1iBPjz5NYi2+jvFfFyMgISCwWQ7t9BlWt4UBRUSrv84XZpQuTL5Qg
+        STJdJJk2sU6JNsRocmztBfUpsFgsIKurq+5wOCwHg0F5cXFR9ng8LTbvQCCAycnJr+y/Z2Zn8WhmFkvL
+        YZ7IdH7+DmazmVX3O2iylc54J7Ob5SU6HI4vdrs9ODExcWCz2TA6Oorh4WEMDQ3BZDJhcHCw1k0lhM74
+        js/no/NVYRy3+RYadD+sVuvnruXmoLt+a2pqSmadpkT0EaWu5R9ByA9QwDx+dmUgywAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAEBAAAAEAIABoBAAAVgAAABgYAAABACAAiAkAAL4EAAAgIAAAAQAgAKgQAABGDgAAMDAAAAEA
